# os-on-rust

./: Cargo.toml  bochsrc  build.sh
asm/: boot.asm  kernel.asm  loader.asm  trap.asm
src/: lib.rs  main.rs  trap.rs
