[package]
name = "op_system_rs"
version = "0.1.0"
authors = ["Nikolay <nikolay.bykovsky@gmail.com>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
incremental = false

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
